# bae

./: .clang-format  .gitignore  .gitmodules  CMakeLists.txt  CMakeSettings.json  LICENSE  Makefile  Notes.md  README.md
bae/: CMakeLists.txt
bae/include/: BasicGame.h  Camera.h  EventHandlers.h  EventQueue.h  FPSControls.h  Geometry.h  GltfModelLoader.h  IGame.h  Instance.h  Light.h  Material.h  MaterialType.h  Materials.h  Mesh.h  MeshManager.h  ModelLoader.h  Renderer.h  Scene.h  SceneUniforms.h  Texture.h  Tonemapping.h  Uniforms.h  Window.h
bae/include/materials/: Basic.h  Lambertian.h  Physical.h  Uniforms.h
bae/include/utils/: Common.h  Constants.h  FileUtils.h  Geometric.h  Offscreen.h  PosColorVertex.h  Shaders.h  Vertex.h
bae/shaders/: basic_fs.sc  basic_vs.sc  cs_luminance_average.sc  cs_luminance_histogram.sc  lambertian_fs.sc  physical_fs.sc  textured_physical_fs.sc  textured_physical_vs.sc  tonemapping_fs.sc  tonemapping_vs.sc  varying.def.sc
bae/shaders/common/: bae_shader_lib.sh  common.sh
bae/src/: BasicGame.cpp  Camera.cpp  Cube.cpp  EventHandlers.cpp  FPSControls.cpp  Geometry.cpp  GltfModelLoader.cpp  Instance.cpp  Light.cpp  MaterialType.cpp  Materials.cpp  Mesh.cpp  ModelLoader.cpp  Renderer.cpp  Tonemapping.cpp  Window.cpp  main.cpp
bae/src/materials/: Basic.cpp  Lambertian.cpp  Physical.cpp
bae/src/utils/: Geometric.cpp  Offscreen.cpp  Shaders.cpp  Vertex.cpp
cmake/modules/: FindSDL2.cmake
examples/01-tonemapping/: common.sh  cs_lum_avg.sc  cs_lum_hist.sc  fs_lottes.sc  fs_reinhard.sc  fs_tonemapping_main.sh  fs_tonemapping_mesh.sc  fs_tonemapping_skybox.sc  fs_tonemapping_tonemap.sc  fs_uchimura.sc  fs_unreal.sc  tonemapping.cpp  vs_tonemapping_tonemap.sc
examples/02-forward-rendering/: ModelLoader.cpp  forward_rendering.cpp  fs_pbr.sc  fs_pbr_masked.sc  fs_phong.sc  fs_textured_physical.sc  fs_z_prepass.sc  varying.def.sc  vs_pbr.sc  vs_phong.sc  vs_textured_physical.sc
examples/03-deferred-rendering/: deferred_rendering.cpp  fs_deferred_pbr.sc  fs_emissive_pass.sc  fs_light_stencil.sc  fs_point_light_volume.sc  varying.def.sc  vs_point_light_volume.sc
examples/04-pbr-ibl/: cs_brdf_lut.sc  cs_irradiance.sc  cs_prefilter_env_map.sc  fs_pbr_ibl.sc  fs_pbr_ibl_with_masking.sc  fs_skybox.sc  pbr_helpers.sh  pbr_ibl.cpp  pbr_irb.cpp  varying.def.sc  vs_pbr_ibl.sc  vs_skybox.sc
examples/05-shadow-mapping/: cs_depth_reduction_general.sc  cs_depth_reduction_initial.sc  depth_reduction.sh  fs_pbr.sc  fs_shadow_maped_pbr.sc  fs_shadow_maped_pbr_masked.sc  fs_shadow_mapped_pbr.sc  fs_shadow_mapped_pbr_masked.sc  fs_shadowed_mesh.sc  fs_shadowed_mesh_masked.sc  fs_texture_pass_through.sc  shadow_mapping.cpp  varying.def.sc  vs_directional_shadowmap.sc  vs_shadow_maped_pbr.sc  vs_texture_pass_through.sc
examples/06-skinning/: fs_pbr_ibl.sc  fs_skybox.sc  makefile  skinning.cpp
examples/common/: common.sh  pbr_helpers.sh  shaderlib.sh  tone_mapping_operators.sh
examples/runtime/meshes/DamagedHelmet/: DamagedHelmet.gltf
examples/runtime/meshes/FlightHelmet/: FlightHelmet.gltf
examples/runtime/meshes/Sponza/: Sponza.gltf
examples/runtime/meshes/pbr_sponza/: Background_diffuse.dds  ChainTexture_diffuse.dds  Lion_diffuse.dds  Sponza.gltf  Sponza_Arch_diffuse.dds  Sponza_Bricks_diffuse.dds  Sponza_Ceiling_diffuse.dds  Sponza_Column_b_diffuse.dds  Sponza_Column_c_diffuse.dds  Sponza_Column_diffuse.dds  Sponza_Curtain_Blue_diffuse.dds  Sponza_Curtain_Green_diffuse.dds  Sponza_Curtain_Red_diffuse.dds  Sponza_Details_diffuse.dds  Sponza_Fabric_Blue_diffuse.dds  Sponza_Fabric_Green_diffuse.dds  Sponza_Fabric_Red_diffuse.dds  Sponza_FlagPole_diffuse.dds  Sponza_Floor_diffuse.dds  Sponza_Roof_diffuse.dds  Sponza_Thorn_diffuse.dds  VaseHanging_diffuse.dds  VasePlant_diffuse.dds  VaseRound_diffuse.dds  Vase_diffuse.dds  white.dds
examples/runtime/meshes/polly/: Display_BaseColor.dds  Display_Emissive.dds  Display_Normal.dds  Display_OcclusionRoughnessMetallic.dds  polly.gltf
examples/runtime/textures/: dummy_metallicRoughness.dds
include/: BasicGame.h  EventQueue.h  Geometry.h  Instance.h  MaterialType.h  Materials.h  Renderer.h  SceneUniforms.h  Texture.h
include/bae/: IcosahedronFactory.h  Offscreen.h  PhysicallyBasedScene.h  ResourceList.h  Tonemapping.h  gltf_model_loader.h  gltf_model_loading.h  tangent_calc.h
include/utils/: Common.h  Constants.h  Geometric.h  Shaders.h  Vertex.h
scripts/: bae.lua  convert_textures.py  genie.lua
scripts/projects/vs2017/: bae.sln  bgfx.vcxproj  bgfx.vcxproj.filters  bimg.vcxproj  bimg.vcxproj.filters  bimg_decode.vcxproj  bimg_decode.vcxproj.filters  bx.vcxproj  bx.vcxproj.filters  example-01-tonemapping.vcxproj  example-01-tonemapping.vcxproj.filters  example-common.vcxproj  example-common.vcxproj.filters  example-glue.vcxproj  example-glue.vcxproj.filters  fcpp.vcxproj  fcpp.vcxproj.filters  geometryc.vcxproj  geometryc.vcxproj.filters  glsl-optimizer.vcxproj  glsl-optimizer.vcxproj.filters  glslang.vcxproj  glslang.vcxproj.filters  shaderc.vcxproj  shaderc.vcxproj.filters  spirv-cross.vcxproj  spirv-cross.vcxproj.filters  spirv-opt.vcxproj  spirv-opt.vcxproj.filters  texturec.vcxproj  texturec.vcxproj.filters  texturev.vcxproj  texturev.vcxproj.filters
shaders/: basic_fs.sc  cs_bae_luminance_average.sc  cs_bae_luminance_histogram.sc  fs_bae_passthrough.sc  fs_bae_textured_physical.sc  fs_bae_tonemapping.sc  lambertian_vs.sc  makefile  textured_basic_fs.sc  textured_basic_vs.sc  textured_physical_vs.sc  vs_bae_passthrough.sc  vs_bae_textured_physical.sc  vs_bae_tonemapping.sc
shaders/common/: bae_shader_lib.sh
src/: FPSControls.cpp  IcosahedronFactory.cpp  Instance.cpp  MaterialType.cpp  Offscreen.cpp  PhysicallyBasedScene.cpp  Renderer.cpp  Tonemapping.cpp  gltf_model_loader.cpp
src/utils/: Geometric.cpp  Shaders.cpp  Vertex.cpp
